[package]
name = "bayfiles-cli"
version = "0.1.0"
authors = ["aiden01 <liangu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "^2.1"
toml = "0.5"
serde_derive = "1.0.98"
serde = "1.0.98"
structopt = "0.2.18"
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" } 
hyper = "0.12"
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }