[package]
name = "bayfiles-cli"
version = "0.1.0"
authors = ["aiden01 <liangu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "^2.1"
toml = "0.5"
serde_derive = "1.0.98"
serde = "1.0.98"
structopt = "0.2.18"
tokio = "*"
reqwest = "0.9.19"
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }
futures-util-preview = "0.3.0-alpha.17"
serde_json = "1.0.40"